<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.anirudhln.hw03.TriviaActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/qString"
            android:id="@+id/qTextView"
            android:layout_weight="0.05"
            android:textAlignment="center"
            android:paddingTop="8dp"
            android:background="#C2E2FD" />

        <TextView
            android:layout_width="253dp"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/timeString"
            android:id="@+id/timeTextView"
            android:textAlignment="center"
            android:paddingTop="8dp"
            android:layout_marginLeft="20dp"
            android:background="#C2E2FD" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/questionImageView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:src="@drawable/trivia" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/questionTextView"
        android:layout_gravity="center_horizontal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonsLayout"></LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quitString"
            android:id="@+id/quitButton"
            android:layout_gravity="top"
            android:layout_weight="0.39" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nextString"
            android:id="@+id/nextButton"
            android:layout_weight="0.40"
            android:layout_marginLeft="100dp"/>
    </LinearLayout>
</LinearLayout>
